2006-03-02  Richard Sandiford  <richard@codesourcery.com>

	* emulparams/elf32ppccommon.sh: New file, extracted from...
	* emulparams/elf32ppc.sh: ...here.
	* emulparams/elf32ppcvxworks.sh: Include elf32ppccommon.sh
	instead of elf32ppc.sh.
	(BSS_PLT): Remove override.
	* Makefile.am (eelf32lppc.c): Depend on elf32ppccommons.h.
	(eelf32lppcnto.c, eelf32lppcsim.c, eelf32ppcnto.c): Likewise.
	(eelf32ppc.c, eelf32ppc_fbsd.c, eelf32ppcsimm): Likewise.
	(eelf32ppclinux.c): Likewise.
	(eelf32ppcvxworks.c): Likewise.  Add missing vxworks.sh dependency.
	* Makefile.in: Regenerate.

2006-02-27  Carlos O'Donell  <carlos@codesourcery.com>

	* Makefile.am: Add html target.
	* Makefile.in: Regenerate.
	* po/Make-in: Add html target.

2006-02-17  Shrirang Khisti  <shrirangk@kpitcummins.com>
            Anil Paranjape   <anilp1@kpitcummins.com>
            Shilin Shakti    <shilins@kpitcummins.com>

	* scripttemp/elf32xc16x.sc: Default linker script for tiny model.
	* scripttemp/elf32xc16xl.sc: Default linker script for large model.
	* scripttemp/elf32xc16xs.sc: Default linker script for small model.
	* emulparams/elf32xc16x.sh: Emulation script for tiny model.
	* emulparams/elf32xc16xl.sh: Emulation script for large model.
	* emulparams/elf32xc16xs.sh: Emulation script for small model.
	* Makefile.am: Add entry to make xc16x target.
	* Makefile.in: Regenerate.
	* configure.tgt: Specify default and other emulation parameters
	for xc16x.
	* NEWS: Announce the support for the new target.

2006-02-16  Nick Hudson  <nick.hudson@dsl.pipex.com>

	* configure.tgt (mips*el-*-netbsd*, mips*-*-netbsd*):
	Use the traditional target.

2006-02-13  Joseph S. Myers  <joseph@codesourcery.com>

	* configure.tgt (arm*b-*-linux-gnueabi): Change to
	arm*b-*-linux-*eabi.
	(arm*-*-linux-gnueabi): Change to arm*-*-linux-*eabi.

2006-02-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/2290
	* NEWS: Updated for the Linux linker search order change.
