@@ -1,0 +1,5 @@
+	.globl	_start
+	.type	_start,@function
+_start:
+	ret
+	.end	_start
