@@ -1,0 +1,5 @@
+	.globl	_start
+	.type	_start,@function
+_start:
+	blr
+	.end	_start
